[project]
name = "Extends the functionality of hydrolink for snapping FLOwPER (streamflow permanence) observation data to various hydrography datasets."
dynamic = ["version"]
description = 'flowperlink'
readme = "README.md"
requires-python = ">=3.9"
license = "unlicense"
license-files = ["LICENSE.md", "AUTHORS.rst", "DISCLAIMER.md", "CODE_OF_CONDUCT.md"]
keywords = ["FLOwPER", "hydrolink", "streamflow permanence", "PROSPER", "hydrology"]
authors = [
  { name = "Steven Pestana", email = "spestana@usgs.gov" },
  { name = "Laura Labriola", email = "llabriola@usgs.gov" },
]
maintainers = [
  { name = "Steven Pestana", email = "spestana@usgs.gov" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "requests",
  "geopandas",
  "sciencebasepy",
  "hydrolink @ git+https://code.usgs.gov/sas/bioscience/hlt/hydrolink.git@custom-hydrography",
]

[project.urls]
Documentation = "https://code.usgs.gov/streamflow-permanence/flowperlink/"
Issues = "https://code.usgs.gov/streamflow-permanence/flowperlink/-/issues"
Source = "https://code.usgs.gov/streamflow-permanence/flowperlink/"
Repository = "https://code.usgs.gov/streamflow-permanence/flowperlink.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "flowperlink/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args: tests}"

[tool.coverage.run]
source_pkgs = ["flowperlink", "tests"]
branch = true
parallel = true
omit = [
  "flowperlink/__about__.py",
]

[tool.coverage.paths]
flowperlink = ["flowperlink",]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["flowperlink"]

[tool.hatch.metadata]
allow-direct-references = true